test/typecheck/reject/fail2.rift
let
  val x = true + 1
in
end
